// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<MousePosition
  className="Diagram"
  isActive={false}
  onMouseMove={[Function]}
>
  <div
    className="Diagram-content"
  >
    <svg
      className="Diagram-links"
    />
  </div>
  <FloatingActionButton
    className="Diagram-add"
    disabled={false}
    mini={false}
    onClick={[Function]}
    secondary={true}
    zDepth={4}
  >
    <ContentAdd />
  </FloatingActionButton>
</MousePosition>
`;

exports[`with blocks renders a link if linking 1`] = `
<MousePosition
  className="Diagram Diagram-linking"
  isActive={true}
  onMouseMove={[Function]}
>
  <div
    className="Diagram-content"
  >
    <BlockDetail
      height={0}
      id="0"
      isLinking={true}
      key="0"
      name="Block"
      onLinkEnd={[Function]}
      onLinkStart={[Function]}
      onNameChange={[Function]}
      onSizeChange={[Function]}
      width={0}
      x={0}
      y={0}
    />
    <svg
      className="Diagram-links"
    />
    <Linking
      fromBlock={
        Object {
          "height": 0,
          "id": "0",
          "name": "Block",
          "width": 0,
          "x": 1,
          "y": 2,
        }
      }
      toMouse={
        Object {
          "x": 10,
          "y": 20,
        }
      }
    />
  </div>
  <FloatingActionButton
    className="Diagram-add"
    disabled={false}
    mini={false}
    onClick={[Function]}
    secondary={true}
    zDepth={4}
  >
    <ContentAdd />
  </FloatingActionButton>
</MousePosition>
`;

exports[`with blocks renders the blocks 1`] = `
<MousePosition
  className="Diagram"
  isActive={false}
  onMouseMove={[Function]}
>
  <div
    className="Diagram-content"
  >
    <BlockDetail
      height={0}
      id="0"
      isLinking={false}
      key="0"
      name="Block 1"
      onLinkEnd={[Function]}
      onLinkStart={[Function]}
      onNameChange={[Function]}
      onSizeChange={[Function]}
      width={0}
      x={0}
      y={0}
    />
    <BlockDetail
      height={0}
      id="1"
      isLinking={false}
      key="1"
      name="Block 2"
      onLinkEnd={[Function]}
      onLinkStart={[Function]}
      onNameChange={[Function]}
      onSizeChange={[Function]}
      width={0}
      x={0}
      y={0}
    />
    <svg
      className="Diagram-links"
    />
  </div>
  <FloatingActionButton
    className="Diagram-add"
    disabled={false}
    mini={false}
    onClick={[Function]}
    secondary={true}
    zDepth={4}
  >
    <ContentAdd />
  </FloatingActionButton>
</MousePosition>
`;

exports[`with links renders the links 1`] = `
<MousePosition
  className="Diagram"
  isActive={false}
  onMouseMove={[Function]}
>
  <div
    className="Diagram-content"
  >
    <BlockDetail
      height={0}
      id="0"
      isLinking={false}
      key="0"
      name="Block 1"
      onLinkEnd={[Function]}
      onLinkStart={[Function]}
      onNameChange={[Function]}
      onSizeChange={[Function]}
      width={0}
      x={0}
      y={0}
    />
    <BlockDetail
      height={0}
      id="1"
      isLinking={false}
      key="1"
      name="Block 2"
      onLinkEnd={[Function]}
      onLinkStart={[Function]}
      onNameChange={[Function]}
      onSizeChange={[Function]}
      width={0}
      x={0}
      y={0}
    />
    <BlockDetail
      height={0}
      id="2"
      isLinking={false}
      key="2"
      name="Block 3"
      onLinkEnd={[Function]}
      onLinkStart={[Function]}
      onNameChange={[Function]}
      onSizeChange={[Function]}
      width={0}
      x={0}
      y={0}
    />
    <svg
      className="Diagram-links"
    >
      <LinkDetail
        fromBlock={
          Object {
            "height": 0,
            "id": "0",
            "name": "Block 1",
            "width": 0,
            "x": 0,
            "y": 0,
          }
        }
        key="0"
        toBlock={
          Object {
            "height": 0,
            "id": "1",
            "name": "Block 2",
            "width": 0,
            "x": 0,
            "y": 0,
          }
        }
      />
      <LinkDetail
        fromBlock={
          Object {
            "height": 0,
            "id": "1",
            "name": "Block 2",
            "width": 0,
            "x": 0,
            "y": 0,
          }
        }
        key="1"
        toBlock={
          Object {
            "height": 0,
            "id": "2",
            "name": "Block 3",
            "width": 0,
            "x": 0,
            "y": 0,
          }
        }
      />
    </svg>
  </div>
  <FloatingActionButton
    className="Diagram-add"
    disabled={false}
    mini={false}
    onClick={[Function]}
    secondary={true}
    zDepth={4}
  >
    <ContentAdd />
  </FloatingActionButton>
</MousePosition>
`;
